--- a/shows.html
+++ b/shows.html
@@ -232,7 +232,7 @@
         <div class="col-lg-4">
           <div class="mb-5">
             <h3 class="footer-heading mb-4">About Deejee</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe pariatur reprehenderit vero atque,
+            <p>Lorem ipsum dolor sit amet, consectetur adiepisicing elit. Saepe pariatur reprehenderit vero atque,
               consequatur id ratione, et non dignissimos culpa? Ut veritatis, quos illum totam quis blanditiis, minima
               minus odio!</p>
           </div>
