--- a/shows.html
+++ b/shows.html
@@ -148,7 +148,7 @@
 
               <div class="player">
                 <audio id="player2" preload="none" controls style="max-width: 100%">
-                  <source src="http://www.largesound.com/ashborytour/sound/AshboryBYU.mp3" type="audio/mp3">
+                 // <source src="." type="audio/mp3"> 
                 </audio>
               </div>
             </div>
