--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
               <img src="images/person_1.jpg" alt="Image" class="w-50 mx-auto img-fluid rounded-circle">
             </div>
             <div class="text-black">
-              <h3 class="font-weight-light h5">Megan Smith</h3>
+              <h3 class="font-weight-light h5">Test</h3>
               <p class="font-italic">&ldquo;Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et, iusto. Aliquam illo, cum sed ea? Ducimus quos, ea?&rdquo;</p>
             </div>
           </div>
@@ -158,7 +158,7 @@
               <img src="images/person_2.jpg" alt="Image" class="w-50 mx-auto img-fluid rounded-circle">
             </div>
             <div class="text-black">
-              <h3 class="font-weight-light h5">Brooke Cagle</h3>
+              <h3 class="font-weight-light h5">Test</h3>
               <p class="font-italic">&ldquo;Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et, iusto. Aliquam illo, cum sed ea? Ducimus quos, ea?&rdquo;</p>
             </div>
           </div>
@@ -168,7 +168,7 @@
               <img src="images/person_3.jpg" alt="Image" class="w-50 mx-auto img-fluid rounded-circle">
             </div>
             <div class="text-black">
-              <h3 class="font-weight-light h5">Philip Martin</h3>
+              <h3 class="font-weight-light h5">Test</h3>
               <p class="font-italic">&ldquo;Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et, iusto. Aliquam illo, cum sed ea? Ducimus quos, ea?&rdquo;</p>
             </div>
           </div>
