--- a/dj.html
+++ b/dj.html
@@ -89,7 +89,7 @@
       <div class="image bg-image order-2" style="background-image: url(images/gitaar.jpeg); margin-top: -50px; " data-aos="fade-up"
         data-aos-delay="200">
       </div>
-      <div class="text order-1" data-aos="fade-up">
+      <div class="text-order-1" data-aos="fade-up">
         <h2 class="text-white mb-3">Over mij</h2>
         <p class="text-white">Laat ik me eerst even voorstellen. Ik ben Morris Melchior, 18 jaar en ik ben net klaar met de middelbare.  <br><br>
 
