--- a/dj.html
+++ b/dj.html
@@ -86,12 +86,12 @@
 
   <div class="container">
     <div class="site-block-half d-block d-lg-flex site-block-video">
-      <div class="image bg-image order-2" style="background-image: url(images/gitaar.jpeg); margin-top: -50px; " data-aos="fade-up"
+      <div class="image bg-image order-2" style="background-image: url(images/gitaar.jpeg); margin-top: -50px; width: 3500px; margin-right: -100px;" data-aos="fade-up"
         data-aos-delay="200">
       </div>
       <div class="text-order-1" data-aos="fade-up"> <br>
         <h2 class="text-white mb-3">Over mij</h2>
-        <p class="text-white">Laat ik me eerst even voorstellen. Ik ben Morris Melchior, 18 jaar en ik ben net klaar met de middelbare.  <br><br>
+        <p class="text-white" style="margin-right: 50px">Laat ik me eerst even voorstellen. Ik ben Morris Melchior, 18 jaar en ik ben net klaar met de middelbare.  <br><br>
 
           Al van kleins af aan zit de liefde voor muziek me in mijn bloed; ik speel in een toffe band (akoestische, bas- en elektrische gitaar en mondharmonica) en daarnaast draai/mix ik heel graag plaatjes en ben ik dol op feestjes, een echte party poeper zeg maar ;-) . <br><br>
           
