--- a/dj.html
+++ b/dj.html
@@ -86,7 +86,7 @@
 
   <div class="container">
     <div class="site-block-half d-block d-lg-flex site-block-video">
-      <div class="image bg-image order-2" style="background-image: url(images/gitaar.jpeg); margin-top: -50px; width: 3500px; margin-right: -100px;" data-aos="fade-up"
+      <div class="image bg-image order-2" style="background-image: url(images/gitaar.jpeg); margin-top: -50px; width: 20%; margin-right: -100px;" data-aos="fade-up"
         data-aos-delay="200">
       </div>
       <div class="text-order-1" data-aos="fade-up"> <br>
