--- a/index.html
+++ b/index.html
@@ -89,8 +89,9 @@
         <div class="row">
           <div class="site-section-heading text-center mb-5 w-border col-md-6 mx-auto" data-aos="fade-up">
             <h2 class="mb-5">Over mij</h2>
-            <p class="text-white">Maak kennis met DJ Morris, een zeer ervaren DJ die ingezet kan worden voor elke feestgelegenheid. Door de jarenlange ervaring en de veelzijdigheid van DJ Morris is geen muziekstijl hem vreemd. Disco classics, Top 40 en feestmuziek zijn genres die regelmatig voorbij komen op de feestjes waar hij draait. Het aanvoelen van de wensen van het publiek, is dé kracht van deze veelzijdige DJ.
-
+            <p class="text-white">Maak kennis met DJ Morris – een ervaren en veelzijdige DJ die elk feest naar een hoger niveau tilt. 
+              Dankzij jarenlange ervaring en brede muziekkennis draait hij moeiteloos alle stijlen: van disco classics en Top 40-hits tot knallende feestmuziek. 
+              Zijn grootste kracht? Het publiek perfect aanvoelen en precies de juiste sfeer neerzetten.
               <br> Meer weten? Check dan de pagina <a href="dj.html"> "Over mij".</a> 
             </p>
           </div>
@@ -138,7 +139,8 @@
         <div class="row">
           <div class="site-section-heading text-center mb-5 w-border col-md-6 mx-auto">
             <h2 class="mb-5">Reviews</h2>
-            <p class="text-white">Bedrijfsfeesten, bruiloften en schoolgala's: slechts een greep uit de lijst met partijen waar ik heb mogen draaien. Hieronder lees je wat mijn boekers van hun feestje vonden.</p>
+            <p class="text-white">Bruiloften, Bedrijfsfeesten, studentenfeestjes en schoolgala's: slechts een greep uit de lijst met partijen waar ik heb mogen draaien. 
+              Hieronder lees je wat mijn boekers van hun feestje vonden.</p>
           </div>
         </div>
         <div class="nonloop-block-13 owl-carousel">
@@ -340,7 +342,9 @@
           <div class="col-lg-4">
             <div class="mb-5">
               <h3 class="footer-heading mb-4">Over mij</h3>
-              <p>Maak kennis met DJ Morris, een zeer ervaren DJ die ingezet kan worden voor elke feestgelegenheid. Door de jarenlange ervaring en de veelzijdigheid van DJ Morris is geen muziekstijl hem vreemd. Disco classics, Top 40 en feestmuziek zijn genres die regelmatig voorbij komen op de feestjes waar hij draait. Het aanvoelen van de wensen van het publiek, is dé kracht van deze veelzijdige DJ.</p>
+              <p>Maak kennis met DJ Morris – een ervaren en veelzijdige DJ die elk feest naar een hoger niveau tilt. 
+                Dankzij jarenlange ervaring en brede muziekkennis draait hij moeiteloos alle stijlen: van disco classics en Top 40-hits tot knallende feestmuziek. 
+                Zijn grootste kracht? Het publiek perfect aanvoelen en precies de juiste sfeer neerzetten.</p>
             </div>
           </div>
           <div class="col-lg-4 mb-5 mb-lg-0">
