--- a/events.html
+++ b/events.html
@@ -220,7 +220,9 @@
         <div class="col-lg-4">
           <div class="mb-5">
             <h3 class="footer-heading mb-4">Over mij</h3>
-            <p>Maak kennis met DJ Morris, een zeer ervaren DJ die ingezet kan worden voor elke feestgelegenheid. Door de jarenlange ervaring en de veelzijdigheid van DJ Morris is geen muziekstijl hem vreemd. Disco classics, Top 40 en feestmuziek zijn genres die regelmatig voorbij komen op de feestjes waar hij draait. Het aanvoelen van de wensen van het publiek, is dé kracht van deze veelzijdige DJ.</p>
+            <p>MMaak kennis met DJ Morris – een ervaren en veelzijdige DJ die elk feest naar een hoger niveau tilt. 
+              Dankzij jarenlange ervaring en brede muziekkennis draait hij moeiteloos alle stijlen: van disco classics en Top 40-hits tot knallende feestmuziek. 
+              Zijn grootste kracht? Het publiek perfect aanvoelen en precies de juiste sfeer neerzetten.</p>
           </div>
         </div>
         <div class="col-lg-4 mb-5 mb-lg-0">
