--- a/index.html
+++ b/index.html
@@ -150,8 +150,8 @@
               <img src="images/person_1.jpg" alt="Image" class="w-50 mx-auto img-fluid rounded-circle">
             </div>
             <div class="text-black">
-              <h3 class="font-weight-light h5">Test</h3>
-              <p class="font-italic">&ldquo;Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et, iusto. Aliquam illo, cum sed ea? Ducimus quos, ea?&rdquo;</p>
+              <h3 class="font-weight-light h5">Mark & Jessie - Bruiloft</h3>
+              <p class="font-italic">DJ Morris heeft een spetterend feest gemaakt van onze bruiloft. Hij voelt het publiek goed aan, stemt de muziek hierop af en deed de interactie erg leuk. We vonden de afstemming van tevoren ook erg professioneel. Absoluut een aanrader!&rdquo;</p>
             </div>
           </div>
 
@@ -160,8 +160,9 @@
               <img src="images/person_2.jpg" alt="Image" class="w-50 mx-auto img-fluid rounded-circle">
             </div>
             <div class="text-black">
-              <h3 class="font-weight-light h5">Test</h3>
-              <p class="font-italic">&ldquo;Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et, iusto. Aliquam illo, cum sed ea? Ducimus quos, ea?&rdquo;</p>
+              <h3 class="font-weight-light h5">Tonki & Elgar - Verjaardagsfeest</h3>
+              <p class="font-italic">&ldquo;DJ Morris voelde de vibe perfect aan en speelde daar feilloos op in. 
+                Dankzij de fijne voorbereiding, zijn energie en stijlvolle looks werd mijn 40e verjaardag onvergetelijk.&rdquo;</p>
             </div>
           </div>
 
@@ -170,8 +171,9 @@
               <img src="images/person_3.jpg" alt="Image" class="w-50 mx-auto img-fluid rounded-circle">
             </div>
             <div class="text-black">
-              <h3 class="font-weight-light h5">Test</h3>
-              <p class="font-italic">&ldquo;Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et, iusto. Aliquam illo, cum sed ea? Ducimus quos, ea?&rdquo;</p>
+              <h3 class="font-weight-light h5">Joost - Witte Was festival</h3>
+              <p class="font-italic">&ldquo;Wij hebben Morris ingehuurd om te draaien op ons festival en met succes!
+                Hij wist precies wat het publiek wilde en kreeg iedereen mee, volgend jaar is hij er 100% weer bij.&rdquo;</p>
             </div>
           </div>
 
@@ -180,8 +182,8 @@
               <img src="images/person_1.jpg" alt="Image" class="w-50 mx-auto img-fluid rounded-circle">
             </div>
             <div class="text-black">
-              <h3 class="font-weight-light h5">Steven Ericson</h3>
-              <p class="font-italic">&ldquo;Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et, iusto. Aliquam illo, cum sed ea? Ducimus quos, ea?&rdquo;</p>
+              <h3 class="font-weight-light h5">Erik & Rosita - Verjaardagsfeest</h3>
+              <p class="font-italic">&ldquo;DJ Morris zorgde voor een onvergetelijk feest! Hij speelde perfect in op de sfeer en hield de dansvloer de hele avond vol. Met zijn topmuziek en energieke vibe ging het dak eraf. Bedankt voor de geweldige avond, Morris!&rdquo;</p>
             </div>
           </div>
 
