--- a/contact.html
+++ b/contact.html
@@ -5,10 +5,8 @@
   <title>DJ Morris &mdash; Voor al uw feesten en partijen!</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Nunito+Sans:200,300,400,700,900|Oswald:400,700">
   <link rel="stylesheet" href="fonts/icomoon/style.css">
-
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <link rel="stylesheet" href="css/magnific-popup.css">
   <link rel="stylesheet" href="css/jquery-ui.css">
@@ -19,25 +17,17 @@
   <link rel="stylesheet" href="css/animate.css">
   <link rel="stylesheet" href="fonts/flaticon/font/flaticon.css">
   <link rel="stylesheet" href="css/fl-bigmug-line.css">
-
-
   <link rel="stylesheet" href="css/aos.css">
-
   <link rel="stylesheet" href="css/style.css">
-
 </head>
 
 <body>
-
-
-
   <div class="site-wrap">
-
     <div class="site-navbar mt-4">
       <div class="container py-1">
         <div class="row align-items-center">
           <div class="col-8 col-md-8 col-lg-4">
-            <h1 class="mb-0"><a href="index.html" class="text-primary"><strong>DJ<span class="text-white h1 mb-0">Morris</span></strong></a></h1>
+            <h1 class="mb-0"><a href="home.html" class="text-primary"><strong>DJ<span class="text-white h1 mb-0">Morris</span></strong></a></h1>
           </div>
           <div class="col-4 col-md-4 col-lg-8">
             <nav class="site-navigation text-right text-md-right" role="navigation">
@@ -46,13 +36,11 @@
                   class="site-menu-toggle js-menu-toggle text-white"><span class="icon-menu h3"></span></a></div>
 
                   <ul class="site-menu js-clone-nav d-none d-lg-block">
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="dj.html">Over mij</a></li>
-                    <li><a href="events.html">Fotoalbum</a></li>
-                    <li><a href="about.html">Reviews</a></li>
-                    <li class="active">
-                      <a href="contact.html">Contact</a>
-                    </li>
+                    <li><a href="home.html">Home</a></li>
+                    <li><a href="over-mij.html">Over mij</a></li>
+                    <li><a href="fotoalbum.html">Fotoalbum</a></li>
+                    <li><a href="reviews.html">Reviews</a></li>
+                    <li class="active"><a href="contact.html">Contact</a></li>
                   </ul>
             </nav>
           </div>
@@ -72,7 +60,7 @@
     <div class="site-mobile-menu-body"></div>
   </div> <!-- .site-mobile-menu -->
 
-  <div class="site-blocks-cover inner-page-cover overlay" style="background-image: url('images/hero_bg_1.jpg');"
+  <div class="site-blocks-cover inner-page-cover overlay" style="background-image: url('images/DJMorris_DJset.jpg');"
     data-aos="fade" data-stellar-background-ratio="0.5" data-aos="fade">
     <div class="container">
       <div class="row align-items-center justify-content-center">
@@ -92,32 +80,32 @@
   
   
   
-          <form action="#" class="contact-form">
+          <form action="send_mail.php" method="post" class="contact-form">
   
             <div class="row form-group">
               <div class="col-md-12 mb-3 mb-md-0">
                 <label class="font-weight-bold" for="fullname">Naam</label>
-                <input type="text" id="fullname" class="form-control" placeholder="Vul hier uw naam in">
+                <input type="text" id="fullname" name="fullname" class="form-control" placeholder="Vul hier uw naam in" required>
               </div>
             </div>
             <div class="row form-group">
               <div class="col-md-12">
                 <label class="font-weight-bold" for="email">E-mail</label>
-                <input type="email" id="email" class="form-control" placeholder="Email-adres">
+                <input type="email" id="email" name="email" class="form-control" placeholder="Email-adres" required>
               </div>
             </div>
 
             <div class="row form-group">
               <div class="col-md-12">
                 <label class="font-weight-bold" for="tel">Telefoonnummer</label>
-                <input type="text" id="subject" class="form-control" placeholder="Telefoonnummer">
+                <input type="text" id="tel" name="phone" class="form-control" placeholder="Telefoonnummer">
               </div>
             </div>
 
             <div class="row form-group">
               <div class="col-md-12">
-                <label class="font-weight-bold" for="email">Onderwerp</label>
-                <input type="text" id="subject" class="form-control" placeholder="Onderwerp van uw bericht">
+                <label class="font-weight-bold" for="subject">Onderwerp</label>
+                <input type="text" id="subject" name="subject" class="form-control" placeholder="Onderwerp van uw bericht">
               </div>
             </div>
   
@@ -126,7 +114,7 @@
               <div class="col-md-12">
                 <label class="font-weight-bold" for="message">Jouw bericht</label>
                 <textarea name="message" id="message" cols="30" rows="5" class="form-control"
-                  placeholder="Typ hier uw bericht"></textarea>
+                  placeholder="Typ hier uw bericht" required></textarea>
               </div>
             </div>
   
@@ -197,10 +185,10 @@
             </div>
             <div class="col-md-6 col-lg-6">
               <ul class="list-unstyled">
-                <li><a href="index.html">Home</a></li>
-                <li><a href="dj.html">Over mij</a></li>
-                <li><a href="events.html">Fotoalbum</a></li>
-                <li><a href="about.html">Reviews</a></li>
+                <li><a href="home.html">Home</a></li>
+                <li><a href="over-mij.html">Over mij</a></li>
+                <li><a href="fotoalbum.html">Fotoalbum</a></li>
+                <li><a href="reviews.html">Reviews</a></li>
               </ul>
             </div>
           </div>
