--- a/reviews.html
+++ b/reviews.html
@@ -84,19 +84,52 @@
         </div>
       </div>
       <div class="nonloop-block-13 owl-carousel">
-        <div class="text-center p-3 p-md-5 bg-white">
-          <div class="text-black">
-            <h3 class="font-weight-light h5">Megan Smith</h3>
-            <p class="font-italic">“Lorem ipsum dolor sit amet...”</p>
+          
+          <div class="text-center p-3 p-md-5 bg-white">
+            <div class="text-black">
+              <h3 class="font-weight-light h5">Mark & Jessie - Bruiloft</h3>
+              <p class="font-italic">DJ Morris heeft een spetterend feest gemaakt van onze bruiloft. Hij voelt het publiek goed aan, stemt de muziek hierop af en deed de interactie erg leuk. We vonden de afstemming van tevoren ook erg professioneel. Absoluut een aanrader!&rdquo;</p>
+            </div>
           </div>
-        </div>
-        <div class="text-center p-3 p-md-5 bg-white">
-          <div class="text-black">
-            <h3 class="font-weight-light h5">Brooke Cagle</h3>
-            <p class="font-italic">“Lorem ipsum dolor sit amet...”</p>
+
+          <div class="text-center p-3 p-md-5 bg-white">
+            <div class="text-black">
+              <h3 class="font-weight-light h5">Tonki & Elgar - Verjaardagsfeest</h3>
+              <p class="font-italic">&ldquo;DJ Morris voelde de vibe perfect aan en speelde daar feilloos op in. 
+                Dankzij de fijne voorbereiding, zijn energie en stijlvolle looks werd mijn 40e verjaardag onvergetelijk.&rdquo;</p>
+            </div>
           </div>
+
+          <div class="text-center p-3 p-md-5 bg-white">
+            <div class="text-black">
+              <h3 class="font-weight-light h5">Joost - Witte Was festival</h3>
+              <p class="font-italic">&ldquo;Wij hebben Morris ingehuurd om te draaien op ons festival en met succes!
+                Hij wist precies wat het publiek wilde en kreeg iedereen mee, volgend jaar is hij er 100% weer bij.&rdquo;</p>
+            </div>
+          </div>
+
+          <div class="text-center p-3 p-md-5 bg-white">
+            <div class="text-black">
+              <h3 class="font-weight-light h5">Erik & Rosita - Verjaardagsfeest</h3>
+              <p class="font-italic">&ldquo;DJ Morris zorgde voor een onvergetelijk feest! Hij speelde perfect in op de sfeer en hield de dansvloer de hele avond vol. Met zijn topmuziek en energieke vibe ging het dak eraf. Bedankt voor de geweldige avond, Morris!&rdquo;</p>
+            </div>
+          </div>
+
+          <div class="text-center p-3 p-md-5 bg-white">
+            <div class="text-black">
+              <h3 class="font-weight-light h5">Nathan Dumlao</h3>
+              <p class="font-italic">&ldquo;Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et, iusto. Aliquam illo, cum sed ea? Ducimus quos, ea?&rdquo;</p>
+            </div>
+          </div>
+
+          <div class="text-center p-3 p-md-5 bg-white">
+            <div class="text-black">
+              <h3 class="font-weight-light h5">Brook Smith</h3>
+              <p class="font-italic">&ldquo;Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et, iusto. Aliquam illo, cum sed ea? Ducimus quos, ea?&rdquo;</p>
+            </div>
+          </div>
+
         </div>
-      </div>
     </div>
   </div>
 
