--- a/fotoalbum.html
+++ b/fotoalbum.html
@@ -78,32 +78,12 @@
     </div>
   </div>
 
-<!-- Slideshow (same content as previous events page) -->
-<div class="slideshow-container">
-  <div class="mySlides fade">
-    <div class="numbertext">1 / 3</div>
-    <img src="images/kerstgala.png" style="width:100%">
-    <div class="text">Caption Text</div>
-  </div>
-  <div class="mySlides fade">
-    <div class="numbertext">2 / 3</div>
-    <img src="images/2.png" style="width:100%">
-    <div class="text">Caption Two</div>
-  </div>
-  <div class="mySlides fade">
-    <div class="numbertext">3 / 3</div>
-    <img src="images/3.png" style="width:100%">
-    <div class="text">Caption Three</div>
-  </div>
-  <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-  <a class="next" onclick="plusSlides(1)">&#10095;</a>
+<!-- Slideshow (dynamic: images loaded from images.php) -->
+<div class="slideshow-container" id="slideshow-container">
+  <!-- slides will be injected here by JavaScript -->
 </div>
 <br>
-<div style="text-align:center">
-  <span class="dot" onclick="currentSlide(1)"></span> 
-  <span class="dot" onclick="currentSlide(2)"></span> 
-  <span class="dot" onclick="currentSlide(3)"></span> 
-</div>
+<div style="text-align:center" id="slideshow-dots"></div>
 
   <div class="bg-primary" data-aos="fade">
     <div class="container">
@@ -167,7 +147,76 @@
   <script src="js/circleaudioplayer.js"></script>
 
   <script src="js/main.js"></script>
+  <script>
+  (function(){
+    var slideIndex = 1;
+    function showSlides(n){
+      var slides = document.querySelectorAll('.mySlides');
+      var dots = document.querySelectorAll('.dot');
+      if(!slides.length) return;
+      if(n > slides.length) slideIndex = 1;
+      if(n < 1) slideIndex = slides.length;
+      slides.forEach(function(s){ s.style.display = 'none'; });
+      dots.forEach(function(d){ d.classList.remove('active'); });
+      slides[slideIndex-1].style.display = 'block';
+      dots[slideIndex-1].classList.add('active');
+    }
+    window.plusSlides = function(n){ showSlides(slideIndex += n); };
+    window.currentSlide = function(n){ showSlides(slideIndex = n); };
 
+    function buildSlides(images){
+      var container = document.getElementById('slideshow-container');
+      var dotsContainer = document.getElementById('slideshow-dots');
+      if(!images || !images.length){
+        container.innerHTML = '<p>Geen afbeeldingen gevonden.</p>';
+        return;
+      }
+      container.innerHTML = '';
+      images.forEach(function(src, i){
+        var slide = document.createElement('div');
+        slide.className = 'mySlides fade';
+        var number = document.createElement('div');
+        number.className = 'numbertext';
+        number.textContent = (i+1) + ' / ' + images.length;
+        var img = document.createElement('img');
+        img.src = src;
+        img.style.width = '100%';
+        var caption = document.createElement('div');
+        caption.className = 'text';
+        slide.appendChild(number);
+        slide.appendChild(img);
+        slide.appendChild(caption);
+        container.appendChild(slide);
+      });
+      var prev = document.createElement('a');
+      prev.className = 'prev';
+      prev.innerHTML = '&#10094;';
+      prev.onclick = function(){ plusSlides(-1); };
+      var next = document.createElement('a');
+      next.className = 'next';
+      next.innerHTML = '&#10095;';
+      next.onclick = function(){ plusSlides(1); };
+      container.appendChild(prev);
+      container.appendChild(next);
+
+      dotsContainer.innerHTML = '';
+      images.forEach(function(_, i){
+        var dot = document.createElement('span');
+        dot.className = 'dot';
+        (function(idx){ dot.onclick = function(){ currentSlide(idx+1); }; })(i);
+        dotsContainer.appendChild(dot);
+      });
+
+      slideIndex = 1;
+      showSlides(slideIndex);
+    }
+
+    fetch('images.php')
+      .then(function(r){ if(!r.ok) throw new Error('Network response not ok'); return r.json(); })
+      .then(function(images){ buildSlides(images); })
+      .catch(function(err){ console.error('Error loading images:', err); });
+  })();
+  </script>
 </body>
 
 </html>
