--- a/fotoalbum.html
+++ b/fotoalbum.html
@@ -174,7 +174,7 @@
       container.innerHTML = '';
       images.forEach(function(src, i){
         var slide = document.createElement('div');
-        slide.className = 'mySlides fade';
+        slide.className = 'mySlides';
         var number = document.createElement('div');
         number.className = 'numbertext';
         number.textContent = (i+1) + ' / ' + images.length;
