Add Dutch translations for DJ Morris website content

--- a/contact.html
+++ b/contact.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title>DJ Morris &mdash; Voor al uw feesten en partijen!</title>
+  <title>DJ Morris &mdash; De juiste muziek op het juiste moment.</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Nunito+Sans:200,300,400,700,900|Oswald:400,700">
@@ -66,7 +66,7 @@
       <div class="row align-items-center justify-content-center">
         <div class="col-md-7 text-center" data-aos="fade-up" data-aos-delay="400">
           <h1 class="text-white">Contact</h1>
-          <p>Voor al uw vragen, opmerkingen of voor boekingen kunt u terecht bij onderstaand formulier</p>
+          <p>Heeft u vragen, wilt u meer informatie of bent u benieuwd naar mijn beschikbaarheid? Vul dan het contactformulier hieronder in.</p>
         </div>
       </div>
     </div>
