--- a/over-mij.html
+++ b/over-mij.html
@@ -90,17 +90,17 @@
       <div class="text-order-1" data-aos="fade-up"> <br>
         <h2 class="text-white mb-3">Over mij</h2>
         <p class="text-white" style="margin-right: 50px">
-Laat ik me eerst even voorstellen. Ik ben Morris Melchior, 23 jaar en woonachtig in Utrecht. Muziek zit al van jongs af aan in mijn DNA. Ik draai geen standaard setjes, maar bouw de avond op zoals een goed feest hoort: met energie, timing en gevoel voor het publiek.<br><br>
+Laat ik me eerst even voorstellen. Ik ben Morris Melchior, 23 jaar en woonachtig in Utrecht. Muziek speelt al mijn hele leven een belangrijke rol. Ik draai geen standaard setjes, maar bouw de avond op zoals een goed feest hoort: met energie, timing en gevoel voor het publiek.<br><br>
 
-Op mijn twaalfde draaide ik al mijn eerste nummers op lokale feestjes. Wat begon met twee oude cd-spelers en een eenvoudige mixer groeide al snel uit tot een professionele setup. In de jaren daarna ben ik steeds vaker gaan draaien en heb ik me ontwikkeld tot een veelzijdige <strong>open format DJ</strong>. Inmiddels heb ik ruime ervaring met <strong>bedrijfsfeesten, bruiloften, verjaardagen en studentenfeesten</strong>, en één ding staat altijd centraal: een volle dansvloer van begin tot eind.<br><br>
+Op mijn twaalfde draaide ik al mijn eerste plaatjes op lokale feestjes. Wat begon met twee oude cd-spelers en een eenvoudige mixer groeide al snel uit tot een professionele setup. In de jaren daarna ben ik steeds vaker gaan draaien en heb ik me ontwikkeld tot een veelzijdige <strong>open format DJ</strong>. Inmiddels heb ik ruime ervaring met <strong>bedrijfsfeesten, bruiloften, verjaardagen en studentenfeesten</strong>, en één ding staat altijd centraal: een volle dansvloer van begin tot eind.<br><br>
 
 Ik speel continu in op het publiek en weet precies wanneer het tijd is om door te pakken of juist even te schakelen. Geen vaste playlists en geen standaard draaiboeken — elk feest is anders en wordt daar ook volledig op afgestemd.<br><br>
 
 Daarnaast beschik ik over alle professionele <strong>licht- en geluidsapparatuur</strong> die nodig is om van een goed feest een topfeest te maken. Dat betekent voor u: één aanspreekpunt voor muziek, licht en geluid. Geen losse leveranciers en geen gedoe — alleen genieten en feestvieren.<br><br>
 
-Vooraf plan ik graag een afspraak in om uw wensen te bespreken en de mogelijkheden door te nemen. Zo weet u precies waar u aan toe bent en zorg ik ervoor dat uw feestavond staat als een huis.<br><br>
+Vooraf plan ik graag een afspraak in om uw wensen te bespreken en de mogelijkheden door te nemen. Zo bent u verzekerd van een feest dat perfect aansluit bij uw verwachtingen.<br><br>
 
-Klaar voor een feest waar nog lang over wordt nagepraat? <strong>Neem contact met mij op</strong>, dan plan ik graag een afspraak in om de mogelijkheden te bespreken.
+Klaar voor een feest waar nog lang over wordt nagepraat? <a href="contact.html"><strong>Neem contact met mij op</strong></a>, dan plan ik graag een afspraak in om de mogelijkheden te bespreken.
         </p>
       </div>
     </div>
