--- a/reviews.html
+++ b/reviews.html
@@ -69,7 +69,7 @@
         <div class="col-md-7 text-center" data-aos="fade-up" data-aos-delay="400">
   
           <h1 class="text-white">Reviews</h1>
-          <p>Wat vonden klanten van mij als DJ?</p>
+          <p>Wat klanten zeggen over DJ Morris</p>
         </div>
       </div>
     </div>
@@ -80,7 +80,7 @@
       <div class="row">
         <div class="site-section-heading text-center mb-5 w-border col-md-6 mx-auto">
           <h2 class="mb-5">Reviews</h2>
-          <p class="text-white">Bedrijfsfeesten, bruiloften en schoolgala's: slechts een greep uit de lijst met partijen waar ik heb mogen draaien.</p>
+          <p class="text-white">Bedrijfsfeesten, bruiloften en schoolgala's: slechts een greep uit de lijst met partijen waar ik heb mogen draaien. Hieronder lees je de ervaringen van mijn boekers.</p>
         </div>
       </div>
       <div class="nonloop-block-13 owl-carousel">
@@ -115,6 +115,7 @@
             </div>
           </div>
 
+          <!-- Tijdelijk uitgeschakeld
           <div class="text-center p-3 p-md-5 bg-white">
             <div class="text-black">
               <h3 class="font-weight-light h5">Nathan Dumlao</h3>
@@ -128,7 +129,7 @@
               <p class="font-italic">&ldquo;Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et, iusto. Aliquam illo, cum sed ea? Ducimus quos, ea?&rdquo;</p>
             </div>
           </div>
-
+          -->
         </div>
     </div>
   </div>
