--- a/contact.html
+++ b/contact.html
@@ -80,7 +80,11 @@
   
   
   
-          <form action="send_mail.php" method="post" class="contact-form">
+          <form name="contact" method="POST" data-netlify="true" netlify-honeypot="bot-field" action="contact-thanks.html" class="contact-form">
+            <input type="hidden" name="form-name" value="contact">
+            <p class="d-none" aria-hidden="true">
+              <label>Laat dit veld leeg<input name="bot-field"></label>
+            </p>
   
             <div class="row form-group">
               <div class="col-md-12 mb-3 mb-md-0">
