--- a/contact-thanks.html
+++ b/contact-thanks.html
@@ -1,18 +1,140 @@
 <!DOCTYPE html>
-<html lang="nl">
+<html lang="en">
+
 <head>
+  <title>DJ Morris &mdash; De juiste muziek op het juiste moment.</title>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Dank — DJ Morris</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Nunito+Sans:200,300,400,700,900|Oswald:400,700">
+  <link rel="stylesheet" href="fonts/icomoon/style.css">
   <link rel="stylesheet" href="css/bootstrap.min.css">
+  <link rel="stylesheet" href="css/magnific-popup.css">
+  <link rel="stylesheet" href="css/jquery-ui.css">
+  <link rel="stylesheet" href="css/owl.carousel.min.css">
+  <link rel="stylesheet" href="css/owl.theme.default.min.css">
+  <link rel="stylesheet" href="css/bootstrap-datepicker.css">
+  <link rel="stylesheet" href="css/mediaelementplayer.css">
+  <link rel="stylesheet" href="css/animate.css">
+  <link rel="stylesheet" href="fonts/flaticon/font/flaticon.css">
+  <link rel="stylesheet" href="css/fl-bigmug-line.css">
+  <link rel="stylesheet" href="css/aos.css">
   <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
-  <div class="container text-center" style="padding:100px 15px;">
-    <h1 id="ct-title">Bedankt</h1>
-    <p id="ct-message">Uw bericht is verzonden. Ik neem zo snel mogelijk contact met u op.</p>
-    <p><a href="home.html" class="btn btn-primary">Terug naar de startpagina</a></p>
+
+  <div class="site-wrap">
+
+    <div class="site-navbar mt-4">
+      <div class="container py-1">
+        <div class="row align-items-center">
+          <div class="col-8 col-md-8 col-lg-4">
+            <h1 class="mb-0"><a href="home.html" class="text-primary"><strong>DJ<span class="text-white h1 mb-0">Morris</span></strong></a></h1>
+          </div>
+          <div class="col-4 col-md-4 col-lg-8">
+            <nav class="site-navigation text-right text-md-right" role="navigation">
+
+              <div class="d-inline-block d-lg-none ml-md-0 mr-auto py-3"><a href="#" class="site-menu-toggle js-menu-toggle text-white"><span class="icon-menu h3"></span></a></div>
+
+              <ul class="site-menu js-clone-nav d-none d-lg-block">
+                <li><a href="home.html">Home</a></li>
+                <li><a href="over-mij.html">Over mij</a></li>
+                <li><a href="fotoalbum.html">Fotoalbum</a></li>
+                <li><a href="reviews.html">Reviews</a></li>
+                <li class="active"><a href="contact.html">Contact</a></li>
+              </ul>
+            </nav>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="site-mobile-menu">
+      <div class="site-mobile-menu-header">
+        <div class="site-mobile-menu-close mt-3">
+          <span class="icon-close2 js-menu-toggle"></span>
+        </div>
+      </div>
+      <div class="site-mobile-menu-body"></div>
+    </div> <!-- .site-mobile-menu -->
+
+    <div class="site-blocks-cover inner-page-cover overlay" style="background-image: url('images/DJMorris_DJset.jpg');" data-aos="fade" data-stellar-background-ratio="0.5">
+      <div class="container">
+        <div class="row align-items-center justify-content-center">
+          <div class="col-md-7 text-center" data-aos="fade-up" data-aos-delay="400">
+            <h1 class="text-white" id="ct-title">Bedankt</h1>
+            <p class="lead text-white">Uw bericht is verzonden. Ik neem zo snel mogelijk contact met u op.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="site-section">
+      <div class="container">
+        <div class="row justify-content-center">
+          <div class="col-md-8 text-center">
+            <div class="p-5 bg-dark text-white rounded">
+              <h2 id="ct-subtitle">Dank voor uw bericht</h2>
+              <p id="ct-message" class="mb-4"> Ik neem zo snel mogelijk contact met u op.</p>
+              <p><a href="home.html" class="btn btn-primary">Terug naar Home</a></p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <footer class="site-footer">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-4">
+            <div class="mb-5">
+              <h3 class="footer-heading mb-4">Over mij</h3>
+              <p>Maak kennis met DJ Morris, een zeer ervaren DJ die ingezet kan worden voor elke feestgelegenheid. Door de jarenlange ervaring en de veelzijdigheid van DJ Morris is geen muziekstijl hem vreemd.</p>
+            </div>
+          </div>
+          <div class="col-lg-4 mb-5 mb-lg-0">
+            <div class="row mb-5">
+              <div class="col-md-12">
+                <h3 class="footer-heading mb-4">Direct naar:</h3>
+              </div>
+              <div class="col-md-6 col-lg-6">
+                <ul class="list-unstyled">
+                  <li><a href="home.html">Home</a></li>
+                  <li><a href="over-mij.html">Over mij</a></li>
+                  <li><a href="fotoalbum.html">Fotoalbum</a></li>
+                  <li><a href="reviews.html">Reviews</a></li>
+                </ul>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="row pt-5 mt-5 text-center">
+          <div class="col-md-12">
+            <p>
+              Copyright &copy;<script>document.write(new Date().getFullYear());</script> - DJ Morris
+            </p>
+          </div>
+        </div>
+      </div>
+    </footer>
+
   </div>
+
+  <script src="js/jquery-3.3.1.min.js"></script>
+  <script src="js/jquery-migrate-3.0.1.min.js"></script>
+  <script src="js/jquery-ui.js"></script>
+  <script src="js/popper.min.js"></script>
+  <script src="js/bootstrap.min.js"></script>
+  <script src="js/owl.carousel.min.js"></script>
+  <script src="js/mediaelement-and-player.min.js"></script>
+  <script src="js/jquery.stellar.min.js"></script>
+  <script src="js/jquery.countdown.min.js"></script>
+  <script src="js/jquery.magnific-popup.min.js"></script>
+  <script src="js/bootstrap-datepicker.min.js"></script>
+  <script src="js/aos.js"></script>
+  <script src="js/circleaudioplayer.js"></script>
+  <script src="js/main.js"></script>
 
   <script>
     (function(){
@@ -22,17 +144,21 @@
       }
       var status = getParam('sent');
       var title = document.getElementById('ct-title');
+      var subtitle = document.getElementById('ct-subtitle');
       var msg = document.getElementById('ct-message');
       if(status === '0'){
-        title.textContent = 'Fout bij verzenden';
-        msg.textContent = 'Er is iets misgegaan bij het verzenden van uw bericht. Probeer later opnieuw of neem direct contact op via e-mail.';
-        msg.style.color = '#a00';
+        if(title) title.textContent = 'Fout bij verzenden';
+        if(subtitle) subtitle.textContent = 'Er is iets misgegaan';
+        if(msg) msg.textContent = 'Er is iets misgegaan bij het verzenden van uw bericht. Probeer later opnieuw of neem direct contact op via e-mail.';
+        if(msg) msg.classList.add('text-danger');
       } else if(status === '1'){
-        title.textContent = 'Bedankt';
-        msg.textContent = 'Uw bericht is verzonden. Ik neem zo snel mogelijk contact met u op.';
-        msg.style.color = '#000';
+        if(title) title.textContent = 'Bedankt';
+        if(subtitle) subtitle.textContent = 'Bericht ontvangen';
+        if(msg) msg.textContent = 'Uw bericht is verzonden. Ik neem zo snel mogelijk contact met u op.';
       }
     })();
   </script>
+
 </body>
+
 </html>
