over mij tekst veranderd

--- a/over-mij.html
+++ b/over-mij.html
@@ -94,7 +94,7 @@ Laat ik me eerst even voorstellen. Ik ben Morris Melchior, 23 jaar en woonachtig
 
 Op mijn twaalfde draaide ik al mijn eerste plaatjes op lokale feestjes. Wat begon met twee oude cd-spelers en een eenvoudige mixer groeide al snel uit tot een professionele setup. In de jaren daarna ben ik steeds vaker gaan draaien en heb ik me ontwikkeld tot een veelzijdige <strong>open format DJ</strong>. Inmiddels heb ik ruime ervaring met <strong>bedrijfsfeesten, bruiloften, verjaardagen en studentenfeesten</strong>, en één ding staat altijd centraal: een volle dansvloer van begin tot eind.<br><br>
 
-Ik speel continu in op het publiek en weet precies wanneer het tijd is om door te pakken of juist even te schakelen. Geen vaste playlists en geen standaard draaiboeken — elk feest is anders en wordt daar ook volledig op afgestemd.<br><br>
+Geen vaste playlists en geen standaard draaiboeken — elk feest is anders.Ik speel continu in op het publiek en weet precies wanneer het tijd is om door te pakken of juist even terug te schakelen. <br><br>
 
 Daarnaast beschik ik over alle professionele <strong>licht- en geluidsapparatuur</strong> die nodig is om van een goed feest een topfeest te maken. Dat betekent voor u: één aanspreekpunt voor muziek, licht en geluid. Geen losse leveranciers en geen gedoe — alleen genieten en feestvieren.<br><br>
 
